<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
    </group>

    <item
        android:title="@string/category">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_coran"
                    android:title="@string/coran"
                    android:icon="@drawable/ic_coran"/>
                <item
                    android:id="@+id/nav_madhu"
                    android:title="@string/madhu"
                    android:icon="@drawable/ic_parole_de_muhammad"/>
                <item
                    android:id="@+id/nav_duaa"
                    android:title="@string/duaa"
                    android:icon="@drawable/ic_praying"/>
                <item
                    android:id="@+id/nav_fiqh"
                    android:title="@string/fiqh"
                    android:icon="@drawable/ic_loi"/>
                <item
                    android:id="@+id/nav_wassiyaath"
                    android:title="@string/wasiyaath"
                    android:icon="@drawable/ic_livre"/>
            </group>
        </menu>
    </item>




    <!--<item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/menu_login_icon"/>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/menu_profile_icon"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/menu_logout_icon"/>
            </group>
        </menu>
    </item>

    <item android:title="Categories">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_restaurants"
                    android:title="@string/restaurants"
                    android:icon="@drawable/restaurant_icon"/>
                <item
                    android:id="@+id/nav_bank"
                    android:title="@string/banks"
                    android:icon="@drawable/bank_icon"/>
                <item
                    android:id="@+id/nav_education"
                    android:title="@string/education"
                    android:icon="@drawable/school_icon"/>
                <item
                    android:id="@+id/nav_shop"
                    android:title="@string/shops"
                    android:icon="@drawable/shop_icon"/>
            </group>
        </menu>
    </item>-->


    <item android:title="Partager">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/ic_share"/>
                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/ic_like"/>
            </group>
        </menu>
    </item>
</menu>