<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sourates_nav_button"
        android:icon="@drawable/ic_coran"
        android:title="@string/sourates"
        app:cnb_textColor="@color/primaryColor"
        app:cnb_iconColor="@color/primaryColor"
        app:cnb_backgroundColor="@color/secondaryColor"/>
    <item
        android:id="@+id/juzz_nav_button"
        android:icon="@drawable/ic_coran"
        android:title="@string/juzz"
        app:cnb_textColor="@color/primaryColor"
        app:cnb_iconColor="@color/primaryColor"
        app:cnb_backgroundColor="@color/secondaryColor"/>
    <item
        android:id="@+id/favorites_nav_button"
        android:icon="@drawable/ic_unlike"
        android:title="@string/favori"
        app:cnb_textColor="@color/primaryColor"
        app:cnb_iconColor="@color/primaryColor"
        app:cnb_backgroundColor="@color/secondaryColor" />
</menu>